"Committing changes to project"

--- a/indext.html
+++ b/indext.html
@@ -9,16 +9,14 @@
 
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
 </head>
 <body>
 <!--Header-->
     <header class="header">
             <a href="#" class="logo">FLIGHT HUB
                 <div class='bx bxs-plane-alt' id="plane icon" ></div>
-            </a>
+            </a>          
                 <uL class="navbar">
                     <li><a class="active" href="#home">Home</a></li>
                     <li><a href="#services">Services</a></li>
@@ -46,31 +44,31 @@
     </div>
     <div class="slider">
         <div class="container-box">
-          <div class="container-img">
-            <i class='bx bxs-briefcase-alt-2 bx-lg'></i>
-          </div>
-          <h4>For every business type</h4>
-          <p>We can take the stress out of business<br> travel,
-            so you can focus on what's important.</p>
+            <div class="container-img">
+                <i class='bx bxs-briefcase-alt-2 bx-lg'></i>
+            </div>
+            <h4>For every business type</h4>
+            <p>We can take the stress out of business<br> travel,
+                 so you can focus on what's important.</p>
         </div>
         <div class="container-box">
-          <div class="container-img">
-            <i class='bx bx-money bx-lg'></i>
-          </div>
-          <h4>For every budget</h4>
-          <p>We offer a wide range of travel <br> services
+            <div class="container-img">
+                <i class='bx bx-money bx-lg'></i>
+                <!--img src="u\save money.jpg"  width="150px" height="100px"-->
+            </div>
+            <h4>For every budget</h4>
+             <p>We offer a wide range of travel <br> services
             to meet your budget and needs.</p>
         </div>
         <div class="container-box">
-          <div class="container-img">
-            <i class='bx bxs-map bx-lg'></i>
-          </div>
-          <h4>For every option</h4>
-          <p>We offer over 150 travel <br> destinations
-            to fulfill your desires.</p>
+            <div class="container-img">
+                <i class='bx bxs-map bx-lg'></i>
+            </div>
+            <h4>For every option</h4>
+             <p>We offer over 150 travel <br> destinations
+            to fullfill your desires.</p>
         </div>
-      </div>
-      
+    </div>
 </section>
 <!--services-->
 <section id="services">
