--- a/Accordion/index.html
+++ b/Accordion/index.html
@@ -17,18 +17,19 @@
          
         <div class="content-container">
             <div class="question">What is the return policy?</div>
-            <div class="answer">Answer here!</div>
+            <div class="answer">none!</div>
         </div>
 
         <div class="content-container">
             <div class="question">What is the most asked question</div>
-            <div class="answer">What the return policy is!</div>
+            <div class="answer">none of your business!</div>
         </div>
 
         <div class="content-container">
             <div class="question">Where are you located</div>
-            <div class="answer">Answer here</div>
+            <div class="answer">Your mum's house?</div>
         </div>
+
     </div>
     <script src="main.js" ></script>
 </body>
