--- a/Flight Booking/indext.html
+++ b/Flight Booking/indext.html
@@ -13,121 +13,67 @@
 </head>
 <body>
 <!--Header-->
-    <header class="header">
-            <a href="#" class="logo">FLIGHT HUB
-                <div class='bx bxs-plane-alt' id="plane icon" ></div>
-            </a>          
-                <uL class="navbar">
-                    <li><a class="active" href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#reviews">Reviews</a></li>
-                </uL>
-    </header>
+<header class="header">
+    <a href="#" class="logo">FLIGHT HUB
+        <div class='bx bxs-plane-alt' id="plane icon" ></div>
+    </a>          
+        <uL class="navbar">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#reviews">Reviews</a></li>
+            <li><a href="FAQ.html" target="_blank">FAQ</a></li>
+        </uL>
+</header>
 <!--home page-->
  <section class="home" id="home">
         <div class="home-text">
             <h1>The sky's the limit!</h1>
             <p>We strive for your satisfaction. Choose us, and
             find the best flights <br> to your destination.</p>
-            <a href="#" class="home-btn" id="exp">EXPLORE</a>
-            <!--form id="form">
-               
-            </form-->
+            <a href="booking.html" target="_blank" class="home-btn" id="exp">EXPLORE & BOOK FLIGHTS</a>
         </div>
 </section>
-
 <!--container-->
-<section class="container">
+<section class="container" id="services">
     <div class="text">
         <h2>Start your trip<br> by choosing one of our services!</h2>
     </div>
     <div class="slider">
-        <div class="container-box">
-            <div class="container-img">
-                <i class='bx bxs-briefcase-alt-2 bx-lg'></i>
-            </div>
-            <h4>For every business type</h4>
-            <p>We can take the stress out of business<br> travel,
-                 so you can focus on what's important.</p>
-        </div>
-        <div class="container-box">
-            <div class="container-img">
-                <i class='bx bx-money bx-lg'></i>
-                <!--img src="u\save money.jpg"  width="150px" height="100px"-->
-            </div>
-            <h4>For every budget</h4>
-             <p>We offer a wide range of travel <br> services
-            to meet your budget and needs.</p>
-        </div>
-        <div class="container-box">
-            <div class="container-img">
-                <i class='bx bxs-map bx-lg'></i>
-            </div>
-            <h4>For every option</h4>
-             <p>We offer over 150 travel <br> destinations
-            to fullfill your desires.</p>
-        </div>
+        <ul class="slides">
+            <li>
+                <div class="container-box">
+                    <div class="container-img">
+                        <i class='bx bxs-briefcase-alt-2 bx-lg'></i>
+                    </div>
+                    <h4>For every business type</h4>
+                    <p>We can take the stress out of business<br> travel,
+                         so you can focus on what's important.</p>
+                </div>
+            </li>
+            <li>
+                <div class="container-box">
+                    <div class="container-img">
+                        <i class='bx bx-money bx-lg'></i>
+                    </div>
+                    <h4>For every budget</h4>
+                    <p>We offer a wide range of travel <br> services
+                        to meet your budget and needs.</p>
+                </div>
+            </li>
+            <li>
+                <div class="container-box">
+                    <div class="container-img">
+                        <i class='bx bxs-map bx-lg'></i>
+                    </div>
+                    <h4>For every option</h4>
+                    <p>We offer over 150 travel <br> destinations
+                        to fullfill your desires.</p>
+                </div>
+            </li>
+        </ul>
     </div>
 </section>
-<!--services-->
-<section id="services">
-    <form id="serve">
-        <a herf="#" class="logo" id="secLogo" >FLIGHT HUB
-            <div class='bx bxs-plane-alt ' id="plane icon" ></div>
-        </a> 
-        <div class="First">
-            <select name="travelType" id="tType">
-                <option value="Round" selected>Round Trip</option>
-                <option value="oneWay">One-Way</option>
-                <option value="multi">Multi-City</option>
-            </select>
-            <select name="departing" id="dpt" required>
-                <option value="Novalidate">Departing From</option>
-                <option value="dc1">Pyongyang, North Korea</option>
-                <option value="dc2">Scranton, Pennsylvania, United States</option>
-                <option value="dc3">Hogwarts School of Witchcraft and Wizardry, United Kingdom</option>
-                <option value="dc4">Quahog, Rhode Island, United States</option>
-                <opyion value="dc5">Wadiya, somehwere in the middle-east</opyion>
-                <option value="dc6">Asgard, planet</option>
-                <option value="dc7">Winterfell, castle</option>
-                <option value="dc8">District 12, Panem</opuion>
-                <option value="dc9">Gotham City, Ethiopia</opuion>
-                <option value="dc10">Narnia, Some land</opuion>
-            </select>
-            <select name="ariving" id="arr" required>
-                <option value="Novalidate">Arriving At </option>
-                <option value="ac1">Pyongyang, North Korea</option>
-                <option value="ac2">Scranton, Pennsylvania, United States</option>
-                <option value="ac3">Hogwarts School of Witchcraft and Wizardry, United Kingdom</option>
-                <option value="ac4">Quahog, Rhode Island, United States</option>
-                <opyion value="ac5">Wadiya, somehwere in the middle-east</opyion>
-                <option value="ac6">Asgard, planet</option>
-                <option value="ac7">Winterfell, castle</option>
-                <option value="ac8">District 12, Panem</option>
-                <option value="ac9">Gotham City, Ethiopia</option>
-                <option value="ac10">Narnia, Some land</option>
-            </select>
-        </div>
-        <div class="second">
-            <label for="dates"> Date</label>
-            <input name="Tdate" id="dates" type="date"> 
-            <br>
-            <label for="passangers">Passangers</label>
-            <div id="Pslct">
-                <select name="passangersOn" id="passangers">
-                    <option value="p1">Infant(0-24 months)</option>
-                    <option value="p2">Child(2-11 years)</option>
-                    <option value="p3">Teenagers(12-18 years)</option> 
-                    <option value="p4" selected>Adult(18-70 years)</option>
-                    <option value="p5">Seinor(70 and older)</option>
-                </select>
-                <input name="spin" id="sp" type="number" value="1" step="1" min="0" max="10"> 
-            </div>
-            <button id="search-button" type="summit">Search Flight</button>
-        </div>
-    </form>
-</section>
+
 <!--testimonials-->
 <section id="reviews">
     <div class="outerdiv">
@@ -233,7 +179,52 @@
         </div>
     </div> 
 </section>
-<!--idk yet maybe footer yay-->
+<!-- footer-->
+<footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="footer-col">
+          <h4>company</h4>
+          <ul>
+            <li><a href="about.html" target="_blank">About Us</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Contact Us</a></li>
+                <ul class="con">
+                    <li><a href="tel:123-456-7890"><i class='bx bxs-phone'>  123-456-7890 </i></a></li>
+                    <li><a href="whatsapp:+12345678900"><i class='bx bxl-whatsapp'>    WhatsApp</i></a></li>
+                    <li><a href="mailto:flighthub@fakegmail.com?subject=Customer support"><i class='bx bxl-gmail'>    Customer support</i></a></li>
+                </ul>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>get help</h4>
+          <ul>
+            <li><a href="booking.html" target="_blank">Book a Flight</a></li>
+            <li><a href="#">Track Your Flight</a></li>
+            <li><a href="#">Manage Your Bookings</a></li>
+            <li><a href="#">Payment Options</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Travel and Accommodation</h4>
+          <ul>
+            <li><a href="#">Hotels</a></li>
+            <li><a href="#">Car Rentals</a></li>
+            <li><a href="#">Activities</a></li>
+            <li><a href="#">Insurance</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>follow us</h4>
+          <div class="social-links">
+            <li><a href="#"><i class='bx bxl-facebook-circle'></i></a></li>
+            <li><a href="#"><i class="bx bxl-twitter"></i></a></li>
+            <li><a href="#"><i class="bx bxl-instagram-alt"></i></a></li>       
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 <!--js script-->
 <script src="scriptt.js"></script>
 </body>
